tests/typecheck/fail/mismatched_return.gg
fn f(int x) -> int {
    while (x > 0) {
        if (x % 2 == 0) {
            return "not an int";
        }
        x = x - 1;
    }
    return x;
}

fn main() -> int {
    f(42);
    return 0;
}
